bluec-tests/tests/valid/stmt_loops/for_multiple_decl_1.c
int main(void) {
    int x = 0;
    for (int i = 0, j = 0; i < 10; ++i) {
        j++;
        x = j;
    }
    return x;
}
