bluec-tests/tests/invalid/types_float/bad_exponent_suffix.c
int main(void)
{
    float foo = 1E2x.f;
}